# chat

./: README.md  pyproject.toml
docs/: pypi.md
src/: config.py  stt.py
src/commands/: __init__.py  backspace.py  chatgpt.py  comma.py  delete.py  git.py  help.py  hey_jarvis.py  paste.py  redo.py  replace_line.py  space.py  undo.py
src/stt/: __main__.py  config.py  stt.py
src/stt/commands/: chatgpt.py  comma.py  delete.py  git.py  hey_jarvis.py  paste.py  space.py  undo.py
src/sttpy/: __main__.py  stt.py
src/sttpy/commands/: backspace.py  chatgpt.py  comma.py  git.py  hey_jarvis.py  paste.py  space.py  undo.py
src/sttpy/utils/: hotkey.py
test/: test_stt.py
