[project]
name = "stt"
version = "0.1.0"
description = "Dead simple speech-to-text"
classifiers = ["Private :: Do Not Upload"]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "keyboard>=0.13.5",
    "langchain-community>=0.3.12",
    "langchain>=0.3.12",
    "sounddevice>=0.5.1",
    "pytest>=8.3.4",
    "torch>=2.5.1",
    "pyperclip>=1.9.0",
    "click>=8.1.7",
    "pygetwindow>=0.0.9",
    "openai-whisper>=20240930",
]

[project.scripts]
stt = "stt.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
default = false

[tool.uv.sources]
stt = { workspace = true }

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "stt",
]
