[project]
name = "sttpy"
version = "0.1.2"
description = "Dead simple speech-to-text"
readme = "docs/pypi.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "keyboard>=0.13.5",
    "langchain-community>=0.3.12",
    "langchain>=0.3.12",
    "sounddevice>=0.5.1",
    "pytest>=8.3.4",
    # "torch>=2.5.1",
    "pyperclip>=1.9.0",
    "click>=8.1.7",
    "pygetwindow>=0.0.9",
    "openai-whisper>=20240930",
]

[project.optional-dependencies]
cuda = [
  "torch>=2.5.1",
  "numba>=0.54.0",
]

[project.scripts]
stt = "sttpy.__main__:main"
sttpy = "sttpy.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
sttpy = { workspace = true }
torch = [
  { index = "pytorch-cu124", extra = "cuda" },
]

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "sttpy",
]
